--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/index.css}" />
      <script th:src="@{/component/jquery/jQuery-2.2.0.min.js}"></script>
      <script th:src="@{/component/bootstrap/js/bootstrap.min.js}"></script>
-     <script th:src="@{/js/charts/Chart.js}"></script>
+     <script th:src="@{/component/charts/Chart.js}"></script>
     <script>
         $(function () {
             Canvas1();
