--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,53 +17,8 @@
     </div>
     <div class="wrapper">
         <!--头部信息-->
-        <header class="main-header">
-            <a href="/"  class="logo">
-                <span class="logo-mini">LR</span>
-                <span class="logo-lg">learun<strong>敏捷框架</strong></span>
-            </a>
-            <nav class="navbar navbar-static-top">
-                <a class="sidebar-toggle">
-                    <span class="sr-only">Toggle navigation</span>
-                </a>
-                <div class="navbar-custom-menu">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown messages-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-envelope-o "></i>
-                                <span class="label label-success">4</span>
-                            </a>
-                        </li>
-                        <li class="dropdown notifications-menu">
-                            <a data-id="tz" href="6.html" class="dropdown-toggle menuItem" data-toggle="dropdown" title="通知通告">
-                                <i class="fa fa-bell-o"></i>
-								<span style="display:none">通知通告 </span>
-                                <span class="label label-warning">10</span>
-                            </a>
-                        </li>
-                        <li class="dropdown tasks-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-flag-o"></i>
-                                <span class="label label-danger">9</span>
-                            </a>
-                        </li>
-                        <li class="dropdown user user-menu">
-                            <a href="/" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="/images/user2-160x160.jpg" class="user-image" alt="User Image"/>
-                                <span class="hidden-xs">administrator</span>
-                            </a>
-                            <ul class="dropdown-menu pull-right">
-                                <li><a class="menuItem" data-id="userInfo" href="5.html"><i class="fa fa-user"></i>个人信息</a></li>
-                                <li><a href="javascript:void();"><i class="fa fa-trash-o"></i>清空缓存</a></li>
-                                <li><a href="javascript:void();"><i class="fa fa-paint-brush"></i>皮肤设置</a></li>
-                                <li class="divider"></li>
-                                <li><a href="~/Login/OutLogin"><i class="ace-icon fa fa-power-off"></i>安全退出</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
+       <header id="header" class="main-header" th:include="header :: headerfrag"></header>
+      	<div id="sidebar" class="main-sidebar"  th:include="header :: headerfrag" ></div>     
         <!--左边导航-->
         <div class="main-sidebar">
             <div class="sidebar">
@@ -118,7 +73,7 @@
             </div>
             <div class="content-iframe" style="overflow: hidden;">
                 <div class="mainContent" id="content-main" style="margin: 10px; margin-bottom: 0px; padding: 0;">
-                    <iframe class="LRADMS_iframe" width="100%" height="100%" src="/default.html"  data-id="default.html"></iframe>
+                    <iframe class="LRADMS_iframe" width="100%" height="100%" src="/indexFrame"  data-id="default.html"></iframe>
                 </div>
             </div>
         </div>
