--- a/src/main/resources/static/css/skins/allskins.css
+++ b/src/main/resources/static/css/skins/allskins.css
@@ -1,5 +1,5 @@
 .skin-blue .main-header .navbar {
-	background-color: #3c8dbc;
+	background-color: #42a5f5;
 }
 
 .skin-blue .main-header .navbar .nav>li>a {
@@ -44,7 +44,7 @@
 }
 
 .skin-blue .main-header .logo {
-	background-color: #367fa9;
+	background-color: #42a5f5;
 	color: #ffffff;
 	border-bottom: 0 solid transparent;
 }
