--- a/src/main/resources/static/css/project/list.css
+++ b/src/main/resources/static/css/project/list.css
@@ -17,7 +17,7 @@ h2{font-size:15px;}
 /**
 列表样式 
 */
-.main{width:1100px;margin:0 auto;overflow:hidden;}
+.main{width:100%;margin:0 auto;overflow:hidden;}
 .titlefont{font-size:14px;font-weight:bold;color:#03a8b1;padding-left:17px;padding-top:17px;float:left;}
 .titlefont a{font-size:14px;font-weight:bold;color:#03a8b1;}
 .titlefont a:hover{color:#eb7b0e;}
