--- a/src/main/resources/templates/project/pageList.html
+++ b/src/main/resources/templates/project/pageList.html
@@ -23,13 +23,12 @@
 						<input type="text" class="form-control date" id="sartTime" name="startTime"/>
 						~<input type="text" class="form-control date" id="endTime" name="endTime"/>
 						</div>
-						
-						 <div class="form-group">
-              				  <input type="text" class="form-control" placeholder="请输入项目名称" id="searchProjectBtn" />
-          				  	<button class="navSearchBtn" style="width: 100px; height: 36px; top: 0px;">搜索</button>
+						 <div class="form-group" style="width:30%;">
+              				  <input type="text" class="form-control" placeholder="请输入项目名称" id="searchProjectBtn" style="width:70%;"/>
+          				  	<button class="navSearchBtn" style="width: 100px; height: 33px; top: 0px;">搜索</button>
           				  </div>
           				  <div class="form-group">
-          				  	<button type="button" class="btn btn-success">新增项目</button>
+          				  	<button type="button" class="btn btn-success" style="height: 34px;margin-top:4px;">新增项目</button>
           				  </div>
 						
 					</div>
