添加进度条

--- a/src/main/resources/static/css/frame/frame.css
+++ b/src/main/resources/static/css/frame/frame.css
@@ -17,9 +17,12 @@
 thead{
 background:#80d2f2;	
 }
-thead td{
+td{
 text-align:center;
 }
 .main-content{
 	width:100%;
+}
+.hide{
+	display:none;
 }
