--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -97,8 +97,8 @@
                             </a>
                             <ul class="dropdown-menu pull-right">
                                 <li><a class="menuItem" data-id="userInfo" href="5.html"><i class="fa fa-user"></i>个人信息</a></li>
-                                <li><a href="javascript:void();"><i class="fa fa-trash-o"></i>清空缓存</a></li>
-                                <li><a href="javascript:void();"><i class="fa fa-paint-brush"></i>皮肤设置</a></li>
+                                <li><a href="javascript:void(0);"><i class="fa fa-trash-o"></i>清空缓存</a></li>
+                                <li><a href="javascript:void(0);"><i class="fa fa-paint-brush"></i>皮肤设置</a></li>
                                 <li class="divider"></li>
                                 <li><a href="~/Login/OutLogin"><i class="ace-icon fa fa-power-off"></i>安全退出</a></li>
                             </ul>
