添加layer弹出框组件

--- a/src/main/resources/templates/project/editLayer.html
+++ b/src/main/resources/templates/project/editLayer.html
@@ -7,89 +7,50 @@
 	<meta content="" name="description" />
 	<meta content="" name="author" />
     <link rel="stylesheet" th:href="@{/component/bootstrap/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/skins/allskins.css}" />
-     <link rel="stylesheet" th:href="@{/css/project/list.css}" />
 </head>
 <body>
 	<div class="main">
-		  <div class="box" id="top10project">
-   			 <span class="titlefont"><a href="/">访问热度TOP10</a></span>
-   			 <span class="more"><a href="/">更多</a></span>
-    
-    <ul class="list">
-	    <li>
-	    <span class="listpic">
-	    <a href="/" title="朝夕选课" target="_blank">
-	    <img src="/images/project/朝夕选课.jpg" alt="朝夕选课" width="180" height="200"  /></a></span>
-	    <div class="listcount">
-	    <span class="view">55</span>
-	    <span class="comment">0</span>
-	    <span class="love">0</span>
-	    </div>
-	    <h2><a href="/" title="朝夕选课" target="_blank">朝夕选课</a></h2>    
-	    </li>
-		<li>
-	    <span class="listpic">
-	    <a href="/" title="房贷计算器专业版" target="_blank">
-	    <img src="/images/project/房贷计算器专业版.jpg" alt="房贷计算器专业版" width="180" height="200"  /></a></span>
-	    <div class="listcount">
-	    <span class="view">94</span>
-	    <span class="comment">0</span>
-	    <span class="love">0</span>
-	    </div>
-	    <h2><a href="/" title="房贷计算器专业版" target="_blank">房贷计算器专业版</a></h2>    
-	    </li>
-	     <li>
-	    <span class="listpic">
-	    <a href="/" title="订蛋糕" target="_blank">
-	    <img src="/images/project/订蛋糕.jpg" alt="订蛋糕" width="180" height="200"  /></a></span>
-	    <div class="listcount">
-	    <span class="view">55</span>
-	    <span class="comment">0</span>
-	    <span class="love">0</span>
-	    </div>
-	    <h2><a href="/" title="订蛋糕" target="_blank">订蛋糕</a></h2>    
-	    </li>
-	    <li>
-	    <span class="listpic">
-	    <a href="/" title="斗图小助手" target="_blank">
-	    <img src="/images/project/斗图小助手.jpg" alt="订蛋糕" width="180" height="200" /></a></span>
-	    <div class="listcount">
-	    <span class="view">55</span>
-	    <span class="comment">0</span>
-	    <span class="love">0</span>
-	    </div>
-	    <h2><a href="/" title="斗图小助手" target="_blank">斗图小助手</a></h2>    
-	    </li>
-	     <li>
-	    <span class="listpic">
-	    <a href="/" title="识花草" target="_blank">
-	    <img src="/images/project/识花草.jpg" alt="识花草" width="180" height="200"  /></a></span>
-	    <div class="listcount">
-	    <span class="view">55</span>
-	    <span class="comment">0</span>
-	    <span class="love">0</span>
-	    </div>
-	    <h2><a href="/" title="识花草" target="_blank">识花草</a></h2>    
-	    </li>
-	    <li>
-	    <span class="listpic">
-	    <a href="/" title="听音乐" target="_blank">
-	    <img src="/images/project/听音乐.jpg" alt="听音乐" width="180" height="200"  /></a></span>
-	    <div class="listcount">
-	    <span class="view">55</span>
-	    <span class="comment">0</span>
-	    <span class="love">0</span>
-	    </div>
-	    <h2><a href="/" title="听音乐" target="_blank">听音乐</a></h2>    
-	    </li>
-    </ul>  
-      
-	</div>
+			<form class="form-inline">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-9">
+							<div class="row">
+								<span class="requiredText">*</span>
+								<label for="projectName">项目名称</label>
+								<input type="text" class="form-control" id="projectName" name="projectName" th:value="${project.projectName}"/>
+							</div>
+							<div class="row">
+								<span class="requiredText">*</span>
+								<label for="projectTypeName">项目类型</label>
+								<select  class="form-control size-little" id="projectTypeName" name="projectTypeName" th:value="${project.projectTypeCode}">
+									<option value="yuedu">阅读</option>
+									<option value="gongju">工具</option>
+									<option value="qita">其他</option>
+								</select>
+							</div>
+							<div class="row">
+								<span class="requiredText">*</span>
+								<label for="projectName">商家名称</label>
+								<input type="text" class="form-control" id="projectCustomerName" name="projectCustomerName" th:value="${project.projectCustomerName}"/>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<img th:src="${project.projectImage}" th:alt="${project.projectName}" width="180" height="200"  />
+						</div>
+					</div>
+				
+				
+					<div class="row">
+						<span class="requiredText">*</span>
+						<label for="projectName">项目名称</label>
+						<input type="text" class="form-control" id="projectName" name="projectName" th:value="${project.projectName}"/>
+					</div>
+				</div>
+			</form>
 	 </div>
 	  <script th:src="@{/component/jquery/jQuery-2.2.0.min.js}"></script>
      <script th:src="@{/component/bootstrap/js/bootstrap.min.js}"></script>
+     <script th:src="@{/js/common.js}"></script>
      <script th:src="@{/js/project/list.js}"></script>
 </body>
 </html>
