--- a/src/main/resources/templates/project/pageList.html
+++ b/src/main/resources/templates/project/pageList.html
@@ -8,6 +8,7 @@
 	<meta content="" name="author" />
     <link rel="stylesheet" th:href="@{/component/bootstrap/css/bootstrap.min.css}" />
      <link rel="stylesheet" th:href="@{/component/magicCheck/magic-check.css}" />
+      <link rel="stylesheet" th:href="@{/component/layer/theme/default/layer.css}" />
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
     <link rel="stylesheet" th:href="@{/css/skins/allskins.css}" />
      <link rel="stylesheet" th:href="@{/css/project/list.css}" />
@@ -96,6 +97,7 @@
 	  </div>
 	  <script th:src="@{/component/jquery/jQuery-2.2.0.min.js}"></script>
      <script th:src="@{/component/bootstrap/js/bootstrap.min.js}"></script>
+     <script th:src="@{/component/layer/layer.js}"></script> 
      <script th:src="@{/js/common.js}"></script>
      <script th:src="@{/js/project/list.js}"></script>
 </body>
